# partydeck-rs

./: Cargo.toml  README.md  README_PR_STEAM_DECK_NATIVE.md  README_STEAM_DECK.md  STEAMDECK_256MB_VAR_SOLUTION.md  STEAM_DECK_NATIVE.md  STEAM_DECK_QUICK_FIX.md  VULKAN_HEADERS_FIX.md  build.sh  steamdeck_autofix.sh  steamdeck_ultimate_build.sh
res/: PartyDeckKWinLaunch.sh  splitscreen_kwin.js  splitscreen_kwin_vertical.js
scripts/: steamdeck_lowspace_build.sh  vulkan_headers_fix.sh
src/: game.rs  input.rs  launch.rs  main.rs  steamdeck_display.rs  steamdeck_input.rs  touchpad.rs
src/app/: app.rs  config.rs
src/util/: mod.rs  sys.rs
