[package]
name = "partydeck-rs-steamdeck"
version = "1.0.0-steamdeck"
edition = "2024"
description = "Ultimate Steam Deck Split-Screen Gaming Tool - Native Edition"
keywords = ["steam-deck", "split-screen", "gaming", "multi-mouse", "steamos"]
categories = ["games", "multimedia"]
authors = ["davidawesome02 <davidawesome02@gmail.com>"]

# Steam Deck native optimizations
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
rpath = true

# Steam Deck target-specific optimizations
[target.'cfg(target_arch = "x86_64")']
rustflags = [
    "-C", "target-cpu=znver2",      # AMD Zen 2 (Steam Deck CPU)
    "-C", "target-feature=+avx2",   # Use AVX2 instructions
    "-C", "force-frame-pointers=no"
]

# Steam Deck specific features
[features]
default = ["steam-deck-native"]
steam-deck-native = []
multi-mouse = []
split-screen-4player = []
steam-input-api = []
gamescope-integration = []

[dependencies]
compress-tools = "0.15.1"
dialog = "0.3.0"
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
env_logger = "0.11.7"
evdev = "=0.13.0"
fastrand = "2.3.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
tar = "0.4.44"
walkdir = "2.5.0"
x11rb = "0.13.1"
zbus = "5.5.0"
zip = "2.6.1"
steamlocate = "2.0.1"
semver = "1.0.26"

# Steam Deck native dependencies
wayland-client = { version = "0.31", features = ["use_system_lib"] }
smithy-client-toolkit = "0.19"
libinput = "0.5.0"

# Performance monitoring for Steam Deck
sysinfo = "0.32.0"

# Steam Deck hardware detection
[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.9.1"
